--- a/INSTALL.TXT
+++ b/INSTALL.TXT
@@ -2,8 +2,8 @@ HOW TO INSTALL SUCCESSWHALE
 ---------------------------
 
 To run your own copy of SuccessWhale, unpack the ZIP file or clone the github
-repository onto a web server that supports PHP and, optionally, MySQL.  Once
-complete, edit config.php with your own settings.
+repository onto a web server that supports PHP and, MySQL.  Once complete, edit
+config.php with your own settings.
 
 As explained in config.php, you’ll need a variety of bits of information to get
 SuccessWhale up and running.
@@ -15,11 +15,11 @@ useful.  As well as setting ENABLED to true, enter the other required
 information (this will be given to you when you register your new app with
 Twitter/Facebook/whatever).
 
-Optionally, you can also enter details for a MySQL database. If you use a
-database, the app will remember users’ column setup, will cache expanded links
+You must also enter details for a MySQL database. The database will be used to
+remember users’ configured accounts and column setup, will cache expanded links
 (speeding up loads somewhat), and will allow users to cache their authentication
 tokens (for example, users will be able to log in with a SuccessWhale password
-and have SuccessWhale manage their authentication with Twitter and Facebook. The
+and have SuccessWhale manage their authentication with Twitter and Facebook.) The
 app will create DB tables for you when you visit index.php for the first time.
 
 Google Analytics is also supported, and you can enter your ID in config.php.
